--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -55,6 +55,22 @@ jobs:
         chmod +x $GITHUB_WORKSPACE/common.sh
         source $GITHUB_WORKSPACE/common.sh && parse_settings
         
+    - name: 释放磁盘空间
+      uses: jlumbroso/free-disk-space@main
+      with:
+        # this might remove tools that are actually needed,
+        # if set to "true" but frees about 6 GB
+        tool-cache: false
+
+        # all of these default to true, but feel free to set to
+        # "false" if necessary for your workflow
+        android: true
+        dotnet: true
+        haskell: true
+        large-packages: true
+        docker-images: true
+        swap-storage: true
+
     - name: 部署编译环境
       env:
         DEBIAN_FRONTEND: noninteractive
