--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -109,7 +109,7 @@ jobs:
       id: package
       if: env.REPO_TOKEN
       run: |
-        cd ${HOME_PATH}
+        cd $HOME_PATH
         make defconfig
         make download -j16
         
@@ -117,7 +117,7 @@ jobs:
       id: compile
       if: env.REPO_TOKEN
       run: |
-        cd ${HOME_PATH}
+        cd $HOME_PATH
         echo -e "$(nproc) thread compile"
         make -j$(($(nproc) + 1)) || make -j1 V=s
 
