Add multiple parameters to client_payload.

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -18,11 +18,17 @@ env:
   GITHUB_REPOSITORY_REF: ${{ github.ref }}
   GITHUB_ACTOR: ${{ github.actor }}
   GITHUB_WORKFLOW: ${{ github.workflow }}
-  CLIENT_PAYLOAD_TARGET: ${{ github.event.client_payload.target }}
   REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
   TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
   TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
   PUSH_PLUS_TOKEN: ${{ secrets.PUSH_PLUS_TOKEN }}
+  CLIENT_PAYLOAD_TARGET: ${{ github.event.client_payload.target }}
+  LUCI_EDITION: ${{ github.event.client_payload.LUCI_EDITION == 'default' && '' || github.event.client_payload.LUCI_EDITION }}
+  CONFIG_FILE: ${{ github.event.client_payload.CONFIG_FILE == 'default' && '' || github.event.client_payload.CONFIG_FILE }}
+  BIOS_MODE: ${{ github.event.client_payload.BIOS_MODE == 'default' && '' || github.event.client_payload.BIOS_MODE }}
+  ENABLE_CCACHE: ${{ github.event.client_payload.ENABLE_CCACHE == 'default' && '' || github.event.client_payload.ENABLE_CCACHE }}
+  UPLOAD_FIRMWARE: ${{ github.event.client_payload.UPLOAD_FIRMWARE == 'default' && '' || github.event.client_payload.UPLOAD_FIRMWARE }}
+  UPLOAD_RELEASE: ${{ github.event.client_payload.UPLOAD_RELEASE == 'default' && '' || github.event.client_payload.UPLOAD_RELEASE }}
   TZ: Asia/Shanghai
 
 jobs:
