Modify the workflow input option instructions.

--- a/.github/workflows/openwrt-lxc.yml
+++ b/.github/workflows/openwrt-lxc.yml
@@ -28,7 +28,7 @@ on:
           - '19.07'
           - '18.06'
       PACKAGES_REPO:
-        description: '自定义插件库分支'
+        description: '自定义插件库分支(注意适配Luci版本)'
         required: false
         default: 'default'
         type: choice
