--- a/.github/workflows/openwrt-lxc.yml
+++ b/.github/workflows/openwrt-lxc.yml
@@ -27,6 +27,15 @@ on:
           - '21.02'
           - '19.07'
           - '18.06'
+      PACKAGES_REPO:
+        description: '自定义插件库'
+        required: false
+        default: 'default'
+        type: choice
+        options:
+          - 'default'
+          - 'libntdll/openwrt-packages'
+          # 在此添加更多...
       PACKAGES_BRANCH:
         description: '自定义插件库分支(注意适配Luci版本)'
         required: false
@@ -35,10 +44,10 @@ on:
         options:
           - 'default'
           - '18.06'
-          - 'lede'
           - 'main'
           - 'master'
           - 'openwrt'
+          # 在此添加更多...
       CONFIG_FILE:
         description: '.config配置文件'
         required: false
@@ -133,6 +142,7 @@ jobs:
       run: |
         cd $GITHUB_WORKSPACE
         INPUTS_LUCI_EDITION="${{ github.event.inputs.LUCI_EDITION }}"
+        INPUTS_PACKAGES_REPO="${{ github.event.inputs.PACKAGES_REPO }}"
         INPUTS_PACKAGES_BRANCH="${{ github.event.inputs.PACKAGES_BRANCH }}"
         INPUTS_CONFIG_FILE="${{ github.event.inputs.CONFIG_FILE }}"
         INPUTS_BIOS_MODE="${{ github.event.inputs.BIOS_MODE }}"        
@@ -210,6 +220,7 @@ jobs:
           "client_payload": {
             "target": "${{ env.MATRIX_TARGET }}",
             "LUCI_EDITION": "${{ env.LUCI_EDITION }}",
+            "PACKAGES_REPO": "${{ env.PACKAGES_REPO }}",
             "PACKAGES_BRANCH": "${{ env.PACKAGES_BRANCH }}",
             "CONFIG_FILE": "${{ env.CONFIG_FILE }}",
             "BIOS_MODE": "${{ env.BIOS_MODE }}",
