--- a/.github/workflows/lede.yml
+++ b/.github/workflows/lede.yml
@@ -160,13 +160,13 @@ jobs:
         sudo -E apt-get -qq update -y
         sudo -E apt-get -qq install -y curl gawk gettext git git-core grep libpython3-dev libssl-dev python3 python3-pip wget xsltproc zip
         sudo timedatectl set-timezone "$TZ"
-        sudo mkdir -p /${MATRIX_TARGET}
-        sudo chown ${USER}:${GROUPS} /${MATRIX_TARGET}
+        sudo mkdir -p /${SOURCE_WORKSPACE}
+        sudo chown ${USER}:${GROUPS} /${SOURCE_WORKSPACE}
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --global user.name "github-actions[bot]"
         
     - name: 下载"${{ matrix.target }}"源码
-      working-directory: /${{ matrix.target }}
+      working-directory: /${{ env.SOURCE_WORKSPACE }}
       run: |
         source $GITHUB_WORKSPACE/common.sh && git_clone_source
 
