--- a/.github/workflows/lede.yml
+++ b/.github/workflows/lede.yml
@@ -133,7 +133,7 @@ jobs:
     - name: 准备工作
       uses: actions/checkout@main
 
-    - name: 获取设置
+    - name: 设置环境变量
       run: |
         cd $GITHUB_WORKSPACE
         INPUTS_LUCI_EDITION="${{ github.event.inputs.LUCI_EDITION }}"
@@ -157,13 +157,7 @@ jobs:
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
-        sudo -E apt-get -qq update -y
-        sudo -E apt-get -qq install -y curl gawk gettext git git-core grep libpython3-dev libssl-dev python3 python3-pip wget xsltproc zip
-        sudo timedatectl set-timezone "$TZ"
-        sudo mkdir -p /${SOURCE_WORKSPACE}
-        sudo chown ${USER}:${GROUPS} /${SOURCE_WORKSPACE}
-        git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-        git config --global user.name "github-actions[bot]"
+        source $GITHUB_WORKSPACE/common.sh && init_env
         
     - name: 下载"${{ matrix.target }}"源码
       working-directory: /${{ env.SOURCE_WORKSPACE }}
