--- a/.github/workflows/lede-lxc.yml
+++ b/.github/workflows/lede-lxc.yml
@@ -97,8 +97,8 @@ on:
         type: boolean
         
 # 定时触发开启开始编译(把下面两个#去掉开启,时间设置请看定时开启编译说明)
-  #schedule:
-   #- cron: 0 0 * * 6
+  schedule:
+   - cron: 0 0 * * 6
 
 
 env:
